--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.10",
+    "bootstrap": "^4.5.0",
     "expo": "~37.0.3",
     "firebase": "^7.15.1",
+    "formik": "^2.1.4",
     "react": "~16.9.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-dropdown-picker": "^3.0.5",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-gifted-chat": "^0.16.1",
+    "react-native-options-button": "^1.0.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
