changed nav setting, added firestore support

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@react-native-community/masked-view": "^0.1.10",
     "bootstrap": "^4.5.0",
     "expo": "~37.0.3",
-    "firebase": "^7.15.1",
+    "expo-constants": "^9.1.1",
+    "expo-permissions": "^9.0.1",
+    "firebase": "7.9.0",
     "formik": "^2.1.4",
     "react": "~16.9.0",
     "react-bootstrap": "^1.0.1",
