--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "expo": "~37.0.3",
     "expo-constants": "^9.1.1",
     "expo-permissions": "^9.0.1",
-    "firebase": "7.9.0",
+    "firebase": "^7.9.0",
     "formik": "^2.1.4",
     "react": "~16.9.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-dropdown-picker": "^3.0.5",
+    "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-gifted-chat": "^0.16.1",
     "react-native-options-button": "^1.0.0",
