--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-permissions": "^9.0.1",
     "firebase": "^7.9.0",
     "formik": "^2.1.4",
+    "material-design-icons": "^3.0.1",
     "react": "~16.9.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "~16.9.0",
@@ -24,9 +25,11 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-gifted-chat": "^0.16.1",
     "react-native-options-button": "^1.0.0",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
+    "react-native-simple-radio-button": "^2.7.4",
     "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
