--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-animated-ellipsis": "^2.0.0",
     "react-native-dropdown-picker": "^3.0.5",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-gifted-chat": "^0.16.1",
+    "react-native-modal-overlay": "^1.3.1",
     "react-native-options-button": "^1.0.0",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-simple-radio-button": "^2.7.4",
+    "react-native-spinkit": "^1.5.0",
     "react-native-svg": "11.0.1",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.3.9",
